[svn] file formats + convergencia CoDSS + MPI primary support (borrega no fim...)

--- a/tsi.conf
+++ b/tsi.conf
@@ -13,7 +13,7 @@ ITERATIONS = 3
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 5
+SIMULATIONS = 16
 
 # The global parameter OPTIMIZE applies only to parallel execution of the
 # program. If this parameter is set to 1 (default), the program will try
@@ -39,8 +39,9 @@ OPTIMIZE = 0
 VERBOSE = 1
 
 # The global RESUME parameter sets the flag that enables the ability to resume
-# the execution from the recorded data on the dump path. The default value is
-# 0 (false).
+# the execution from the data recorded on the dump path. The default value is
+# 0 (false). Setting this flag to 1 (true) will enable all dump flags. See
+# the DUMP section.
 #RESUME = 0
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
@@ -49,11 +50,24 @@ INPUT_PATH = /home/data/input/
 
 # The global OUTPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to write files.
-OUTPUT_PATH = /home/data/miguel-output/
+OUTPUT_PATH = /home/data/output/
 
 # The global LOG_PATH parameter sets the path for the log files. If no value
-# is supplied, the current path will be used to write logs.
-LOG_PATH = /home/data/miguel-output/logs/
+# is supplied, the path in the OUTPUT_PATH parameter will be used to write
+# the logs.
+#LOG_PATH = /home/data/output/logs/
+
+# The global RESULT_FILE parameter sets the filename to use for the best AI
+# grid generated. The default filename is "BestAI.tsi".
+#RESULT_FILE = test.tsi
+
+# The global RESULT_TYPE parameter sets the format for the file with the
+# result grid. The default value is "tsi-ascii", compatible with GSLIB
+# format. Alternative values are "tsi-bin", TSI proprietary binary format;
+# "sgems", a binary format compatible with S-GEMS; "cart-grid" for a
+# plain cartesian grid and "gslib" for a file with GSLIB format.
+RESULT_TYPE = gslib
+
 
 
 [HEAP]
@@ -85,13 +99,13 @@ LOG_PATH = /home/data/miguel-output/logs/
 ########################################################################
 [GRID]
 # smallTest
-#XNUMBER = 19      # Number of blocks in X direction (NX)
-#YNUMBER = 19      # Number of blocks in Y direction (NY)
-#ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+XNUMBER = 19      # Number of blocks in X direction (NX)
+YNUMBER = 19      # Number of blocks in Y direction (NY)
+ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 # corrTest
-XNUMBER = 194      # Number of blocks in X direction (NX)
-YNUMBER = 192      # Number of blocks in Y direction (NY)
-ZNUMBER = 200      # Number of blocks in Z direction (NZ)
+#XNUMBER = 194      # Number of blocks in X direction (NX)
+#YNUMBER = 192      # Number of blocks in Y direction (NY)
+#ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
 #XNUMBER = 300      # Number of blocks in X direction (NX)
 #YNUMBER = 300      # Number of blocks in Y direction (NY)
@@ -115,16 +129,15 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 
 # The FILENAME parameter sets the name for the file with the seismic
 # data.
-#FILENAME = /home/data/input/seismic-19x19x200.out
-FILENAME = /home/data/input/seismic-194x192x200.out
-#FILENAME = /home/data/input/seismic-300x300x320.out
+#FILENAME = seismic-bin-19x19x200.tsi
+FILENAME = Seismic-19x19x200.out
+#FILENAME = Seismic-194x192x200.out
+#FILENAME = Seismic-300x300x320.tsi
 
-# The BIN_FILE parameter sets the name for the file with the seismic
-# data in binary format. If this parameter is set, this file will be
-# used instead of the text file set in FILENAME.
-#BIN_FILE = /home/data/input/seismic-19x19x200.bin
-BIN_FILE = /home/data/input/seismic-194x192x200.bin
-#BIN_FILE = /home/data/input/seismic-300x300x320.bin
+# The FILE_TYPE parameter sets the file format of the file to be parsed.
+# The default value is "tsi-ascii". See GLOBAL:RESULT_TYPE for more options
+# for FILE_TYPE.
+FILE_TYPE = cart-grid
 
 ########################################################################
 ########################################################################
@@ -135,7 +148,9 @@ BIN_FILE = /home/data/input/seismic-194x192x200.bin
 [DUMP]
 # Flags for dumping temporary grid data during execution. The default value
 # is 0 (false). If the RESUME flag is set to 1 (true) all dump flags will
-# be enabled automatically.
+# be enabled automatically. Dump files have fixed file names related to the
+# TSI execution parameters with the following format:
+# [iteration].[simulation].[grid_type].tsi
 #BAI   = 0            # Dump best acoustic impedance grid
 #BCM   = 0            # Dump best correlations grid
 #AI    = 0            # Dump acoustic impedance grid
@@ -145,19 +160,21 @@ BIN_FILE = /home/data/input/seismic-194x192x200.bin
 
 # The PATH parameter sets the path that will be appended to the filenames
 # of the dump files. If no parameter is supplied, the global parameter
-# OUTPUT_PATH will be used. Dump filenames have the format:
-# [node].[iteration].[simulation].[grid_type].out
+# OUTPUT_PATH will be used.
 #PATH =
+
+# The DUMP_TYPE parameter sets the file format of the files to be dumped.
+# The default value is "tsi-bin". See GLOBAL:RESULT_TYPE for more options
+# for DUMP_TYPE.
+DUMP_TYPE = tsi-ascii
 
 DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
 
-
-##### BCM & BAI Initial values ##### 
-
 [INIT]
-BCM = -2
+# Values to initialize new BAI and new BCM at the beginning of a new
+# iteration???
 BAI = 0
-
+BCM = -2
 
 
 ########################################################################
@@ -175,14 +192,20 @@ BAI = 0
 #PATH =
 
 # The FILENAME parameter sets the name for the file with the wavelet data.
-FILENAME = /home/data/input/Wavelet.prn
+FILENAME = Wavelet.prn
 
+# The USED_VALUES parameter sets the number of values to be used from the
+# wavelet data.
 USED_VALUES = 64    # Size of wavelet -1
+
+# SPOTS = USED_VALUES/2
 SPOTS = 32          # (not usable)
 
 
 [CORR]
-BCM_ROOT = 1        # Correlation parameters???
+# The parameter BCM_ROOT is a flag that enables some additional calculations
+# during the seismic inversion phase... MORE INFO...
+BCM_ROOT = 1
 
 # The flag RANDOM_LAYERS enables the randomization of the size of the
 # correlation vectors used to decide which AI vectors are selected for the
@@ -209,7 +232,8 @@ LAYER_SIZE_MIN = 25
 ##### Hard Data Parameters #####
 
 [HARDDATA]
-FILENAME = /home/data/input/Wells.prn      # Hard Data file 
+#PATH =
+FILENAME = Wells.prn                       # Hard Data file 
 NVARI    = 4                               # Number of columns in the data file (to eliminate)
 IXL      = 1                               # Column number of X coordinate
 IYL      = 2                               # Column number of Y coordinate
@@ -257,7 +281,8 @@ ZSIZE  = 1         # Block size in Z axis (ZSIZ)
 [MASK]
 NULL_VALUE = -99999.25                      # Null value (NOSVALUE)
 USE_MASK   = 0                              # Use of mask flag (IMASK)
-FILENAME   = /home/data/input/Mask.dat      # Mask file 
+#PATH =
+FILENAME   = Mask.dat                       # Mask file 
 
 
 ##### Search Parameters #####
