[svn] LOGGING E BUG FIX NO GLOBAL_CORRELATION

--- a/tsi.conf
+++ b/tsi.conf
@@ -55,7 +55,7 @@ OUTPUT_PATH = /home/data/output/
 # The global LOG_PATH parameter sets the path for the log files. If no value
 # is supplied, the path in the OUTPUT_PATH parameter will be used to write
 # the logs.
-#LOG_PATH = /home/data/output/logs/
+LOG_PATH = /home/data/output/logs/
 
 # The global RESULT_FILE parameter sets the filename to use for the best AI
 # grid generated. The default filename is "BestAI.tsi".
@@ -130,14 +130,14 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 # The FILENAME parameter sets the name for the file with the seismic
 # data.
 #FILENAME = seismic-bin-19x19x200.tsi
-FILENAME = Seismic-19x19x200.out
-#FILENAME = Seismic-194x192x200.out
-#FILENAME = Seismic-300x300x320.tsi
+FILENAME = seismic-19x19x200.out
+#FILENAME = seismic-194x192x200.out
+#FILENAME = seismic-300x300x320.tsi
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
 # The default value is "tsi-ascii". See GLOBAL:RESULT_TYPE for more options
 # for FILE_TYPE.
-FILE_TYPE = cart-grid
+FILE_TYPE = gslib
 
 ########################################################################
 ########################################################################
