--- a/tsi.conf
+++ b/tsi.conf
@@ -13,7 +13,7 @@ ITERATIONS = 3
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 16
+SIMULATIONS = 4
 
 # The global parameter OPTIMIZE applies only to parallel execution of the
 # program. If this parameter is set to 1 (default), the program will try
@@ -43,6 +43,11 @@ VERBOSE = 1
 # 0 (false). Setting this flag to 1 (true) will enable all dump flags. See
 # the DUMP section.
 #RESUME = 0
+
+# The OPTIMIZE_LAST iteration parameter disables the selection and generation
+# of new best values since they are not needed. The default value is 1 (true).
+# Enabling the RESUME feature disables this optimization.
+#OPTIMIZE_LAST = 1
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
@@ -92,8 +97,13 @@ RESULT_TYPE = gslib
 #THRESHOLD = 8
 
 # The heap PATH parameters sets the path to the location where the swap
-# files will bw stored. The default value is "/tmp/"
+# files will bw stored. The default value is "/tmp/".
 #TMP_PATH = /tmp/
+
+# The USE_MPI_IO parameter switches the I/O functions from the standard
+# library to the I/O functions provided by the MPI library. The default
+# value is 0 (false).
+#USE_MPI_IO = 0
 
 ########################################################################
 ########################################################################
