--- a/tsi.conf
+++ b/tsi.conf
@@ -8,12 +8,12 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 4
+ITERATIONS = 1
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 32
+SIMULATIONS = 4
 
 # The global parameter OPTIMIZE applies only to parallel execution of the
 # program. If this parameter is set to 1 (default), the program will try
@@ -60,7 +60,7 @@ OUTPUT_PATH = /home/data/output/
 # The global LOG_PATH parameter sets the path for the log files. If no value
 # is supplied, the path in the OUTPUT_PATH parameter will be used to write
 # the logs.
-LOG_PATH = /home/data/output/logs/
+#LOG_PATH = /home/data/output/logs/
 
 # The global RESULT_FILE parameter sets the filename to use for the best AI
 # grid generated. The default filename is "BestAI.tsi".
@@ -109,13 +109,13 @@ RESULT_TYPE = gslib
 ########################################################################
 [GRID]
 # smallTest
-XNUMBER = 19      # Number of blocks in X direction (NX)
-YNUMBER = 19      # Number of blocks in Y direction (NY)
-ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+#XNUMBER = 19      # Number of blocks in X direction (NX)
+#YNUMBER = 19      # Number of blocks in Y direction (NY)
+#ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 # corrTest
-#XNUMBER = 194      # Number of blocks in X direction (NX)
-#YNUMBER = 192      # Number of blocks in Y direction (NY)
-#ZNUMBER = 200      # Number of blocks in Z direction (NZ)
+XNUMBER = 194      # Number of blocks in X direction (NX)
+YNUMBER = 192      # Number of blocks in Y direction (NY)
+ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
 #XNUMBER = 300      # Number of blocks in X direction (NX)
 #YNUMBER = 300      # Number of blocks in Y direction (NY)
@@ -140,14 +140,14 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 # The FILENAME parameter sets the name for the file with the seismic
 # data.
 #FILENAME = seismic-bin-19x19x200.tsi
-FILENAME = seismic-19x19x200.out
-#FILENAME = seismic-194x192x200.out
+#FILENAME = Seismic-19x19x200.out
+FILENAME = Seismic-194x192x200.out
 #FILENAME = seismic-300x300x320.tsi
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
 # The default value is "tsi-ascii". See GLOBAL:RESULT_TYPE for more options
 # for FILE_TYPE.
-FILE_TYPE = gslib
+FILE_TYPE = cart-grid
 
 ########################################################################
 ########################################################################
