--- a/tsi.conf
+++ b/tsi.conf
@@ -8,7 +8,7 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 1
+ITERATIONS = 4
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
@@ -86,7 +86,7 @@ RESULT_TYPE = gslib
 # is being executed on a cluster, no local file system is needed for each
 # node. Although a local file system would yield the best performance, the
 # program can use any file system available to the cluster.
-#USEFS = 1
+USEFS = 1
 
 # The heap THRESHOLD parameter sets the number of grids to allocate before
 # attempting to swap any grid to disk. The default value is 8, the minimum
@@ -109,13 +109,13 @@ RESULT_TYPE = gslib
 ########################################################################
 [GRID]
 # smallTest
-#XNUMBER = 19      # Number of blocks in X direction (NX)
-#YNUMBER = 19      # Number of blocks in Y direction (NY)
-#ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+XNUMBER = 19      # Number of blocks in X direction (NX)
+YNUMBER = 19      # Number of blocks in Y direction (NY)
+ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 # corrTest
-XNUMBER = 194      # Number of blocks in X direction (NX)
-YNUMBER = 192      # Number of blocks in Y direction (NY)
-ZNUMBER = 200      # Number of blocks in Z direction (NZ)
+#XNUMBER = 194      # Number of blocks in X direction (NX)
+#YNUMBER = 192      # Number of blocks in Y direction (NY)
+#ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
 #XNUMBER = 300      # Number of blocks in X direction (NX)
 #YNUMBER = 300      # Number of blocks in Y direction (NY)
@@ -140,8 +140,8 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 # The FILENAME parameter sets the name for the file with the seismic
 # data.
 #FILENAME = seismic-bin-19x19x200.tsi
-#FILENAME = Seismic-19x19x200.out
-FILENAME = Seismic-194x192x200.out
+FILENAME = Seismic-19x19x200.out
+#FILENAME = Seismic-194x192x200.out
 #FILENAME = seismic-300x300x320.tsi
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
