[svn] Merge do branch 5.0 com o codigo UNSTABLE latest DSS latest TSI-MPI

--- a/tsi.conf
+++ b/tsi.conf
@@ -8,12 +8,12 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 2
+ITERATIONS = 4
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 2
+SIMULATIONS = 4
 
 # The global parameter OPTIMIZE applies only to parallel execution of the
 # program. If this parameter is set to 1 (default), the program will try
@@ -55,12 +55,12 @@ INPUT_PATH = /home/data/input/
 
 # The global OUTPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to write files.
-OUTPUT_PATH = /home/data/output/
+OUTPUT_PATH = /home/data/output.miguel/
 
 # The global LOG_PATH parameter sets the path for the log files. If no value
 # is supplied, the path in the OUTPUT_PATH parameter will be used to write
 # the logs.
-#LOG_PATH = /home/data/output/logs/
+LOG_PATH = /home/data/output.miguel/logs/
 
 # The global RESULT_FILE parameter sets the filename to use for the best AI
 # grid generated. The default filename is "BestAI.tsi".
@@ -86,7 +86,7 @@ RESULT_TYPE = gslib
 # is being executed on a cluster, no local file system is needed for each
 # node. Although a local file system would yield the best performance, the
 # program can use any file system available to the cluster.
-#USEFS = 1
+USEFS = 1
 
 # The heap THRESHOLD parameter sets the number of grids to allocate before
 # attempting to swap any grid to disk. The default value is 8, the minimum
@@ -94,11 +94,11 @@ RESULT_TYPE = gslib
 # heap will only allocate more space when it's needed. If the value is set
 # to the heap SIZE, no swapping will occur (same as USEFS = 0). Higher values
 # yield less swapping.
-#THRESHOLD = 8
+THRESHOLD = 8
 
 # The heap PATH parameters sets the path to the location where the swap
 # files will bw stored. The default value is "/tmp/".
-#TMP_PATH = /tmp/
+TMP_PATH = /tmp/tsi-miguel/
 
 # The USE_MPI_IO parameter switches the I/O functions from the standard
 # library to the I/O functions provided by the MPI library. The default
@@ -140,14 +140,14 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 # The FILENAME parameter sets the name for the file with the seismic
 # data.
 #FILENAME = seismic-bin-19x19x200.tsi
-FILENAME = Seismic-19x19x200.out
-#FILENAME = Seismic-194x192x200.out
+FILENAME = seismic-19x19x200.out
+#FILENAME = seismic-194x192x200.out
 #FILENAME = seismic-300x300x320.tsi
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
 # The default value is "tsi-ascii". See GLOBAL:RESULT_TYPE for more options
 # for FILE_TYPE.
-FILE_TYPE = cart-grid
+FILE_TYPE = gslib
 
 ########################################################################
 ########################################################################
