--- a/tsi-mig.conf
+++ b/tsi-mig.conf
@@ -8,12 +8,12 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 3
+ITERATIONS = 2
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 16
+SIMULATIONS = 2
 
 # The global parameter OPTIMIZE applies only to parallel execution of the
 # program. If this parameter is set to 1 (default), the program will try
@@ -44,6 +44,11 @@ VERBOSE = 1
 # the DUMP section.
 #RESUME = 0
 
+# The OPTIMIZE_LAST iteration parameter disables the selection and generation
+# of new best values since they are not needed. The default value is 1 (true).
+# Enabling the RESUME feature disables this optimization.
+#OPTIMIZE_LAST = 1
+
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
 INPUT_PATH = /home/data/input/
@@ -72,16 +77,16 @@ RESULT_TYPE = gslib
 
 [HEAP]
 # The heap SIZE parameter sets the number of grids that will be made
-# available for the TSI execution. The default value is 14, the current
+# available for the TSI execution. The default value is 12, the current
 # maximum number of grids that are needed.
-#SIZE = 14
+#SIZE = 12
 
 # The heap USEFS parameter is the flag that triggers swapping unused grids
 # to disk to save memory. The default value is 0 (false). If the program
 # is being executed on a cluster, no local file system is needed for each
 # node. Although a local file system would yield the best performance, the
 # program can use any file system available to the cluster.
-#USEFS = 1
+USEFS = 1
 
 # The heap THRESHOLD parameter sets the number of grids to allocate before
 # attempting to swap any grid to disk. The default value is 8, the minimum
@@ -89,23 +94,28 @@ RESULT_TYPE = gslib
 # heap will only allocate more space when it's needed. If the value is set
 # to the heap SIZE, no swapping will occur (same as USEFS = 0). Higher values
 # yield less swapping.
-#THRESHOLD = 8
+THRESHOLD = 8
 
 # The heap PATH parameters sets the path to the location where the swap
-# files will bw stored. The default value is "/tmp/"
-#TMP_PATH = /tmp/
+# files will bw stored. The default value is "/tmp/".
+TMP_PATH = /tmp/tsi-miguel/
+
+# The USE_MPI_IO parameter switches the I/O functions from the standard
+# library to the I/O functions provided by the MPI library. The default
+# value is 0 (false).
+#USE_MPI_IO = 0
 
 ########################################################################
 ########################################################################
 [GRID]
 # smallTest
-XNUMBER = 19      # Number of blocks in X direction (NX)
-YNUMBER = 19      # Number of blocks in Y direction (NY)
-ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+#XNUMBER = 19      # Number of blocks in X direction (NX)
+#YNUMBER = 19      # Number of blocks in Y direction (NY)
+#ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 # corrTest
-#XNUMBER = 194      # Number of blocks in X direction (NX)
-#YNUMBER = 192      # Number of blocks in Y direction (NY)
-#ZNUMBER = 200      # Number of blocks in Z direction (NZ)
+XNUMBER = 194      # Number of blocks in X direction (NX)
+YNUMBER = 192      # Number of blocks in Y direction (NY)
+ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
 #XNUMBER = 300      # Number of blocks in X direction (NX)
 #YNUMBER = 300      # Number of blocks in Y direction (NY)
@@ -130,9 +140,9 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 # The FILENAME parameter sets the name for the file with the seismic
 # data.
 #FILENAME = seismic-bin-19x19x200.tsi
-FILENAME = seismic-19x19x200.out
-#FILENAME = seismic-194x192x200.out
-#FILENAME = seismic-300x300x320.tsi
+#FILENAME = seismic-19x19x200.out
+FILENAME = seismic-194x192x200.out
+#FILENAME = seismic-300x300x320.out
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
 # The default value is "tsi-ascii". See GLOBAL:RESULT_TYPE for more options
@@ -215,7 +225,7 @@ BCM_ROOT = 1
 # The parameter LAYERS_MIN set the minimum number of layers to use when
 # spliting a grid. If RANDOM_LAYERS is set to 0 (false), LAYERS_MIN will
 # be used to set the fixed number of layers to be used.
-LAYERS_MIN = 4
+LAYERS_MIN = 6
 
 # The parameter LAYERS_MIN sets the minimum number of points to be used
 # for a grid layer.
