[svn] novo compare_parallel, MUITO MAIS RAPIDO

--- a/tsi-mig.conf
+++ b/tsi-mig.conf
@@ -86,7 +86,7 @@ RESULT_TYPE = gslib
 # is being executed on a cluster, no local file system is needed for each
 # node. Although a local file system would yield the best performance, the
 # program can use any file system available to the cluster.
-USEFS = 1
+#USEFS = 1
 
 # The heap THRESHOLD parameter sets the number of grids to allocate before
 # attempting to swap any grid to disk. The default value is 8, the minimum
@@ -94,7 +94,7 @@ USEFS = 1
 # heap will only allocate more space when it's needed. If the value is set
 # to the heap SIZE, no swapping will occur (same as USEFS = 0). Higher values
 # yield less swapping.
-THRESHOLD = 8
+#THRESHOLD = 8
 
 # The heap PATH parameters sets the path to the location where the swap
 # files will bw stored. The default value is "/tmp/".
