[svn] bug fixes no dssim.c e umas migalhas...

--- a/tsi-mig.conf
+++ b/tsi-mig.conf
@@ -94,7 +94,7 @@ RESULT_TYPE = gslib
 # heap will only allocate more space when it's needed. If the value is set
 # to the heap SIZE, no swapping will occur (same as USEFS = 0). Higher values
 # yield less swapping.
-#THRESHOLD = 8
+THRESHOLD = 8
 
 # The heap PATH parameters sets the path to the location where the swap
 # files will bw stored. The default value is "/tmp/".
@@ -119,7 +119,11 @@ TMP_PATH = /tmp/tsi-miguel/
 # bigTest
 XNUMBER = 300      # Number of blocks in X direction (NX)
 YNUMBER = 300      # Number of blocks in Y direction (NY)
-ZNUMBER = 320      # Number of blocks in Z direction (NZ)
+ZNUMBER = 372   # Number of blocks in Z direction (NZ)
+# giant
+#XNUMBER = 491      # Number of blocks in X direction (NX)
+#YNUMBER = 334      # Number of blocks in Y direction (NY)
+#ZNUMBER = 552      # Number of blocks in Z direction (NZ)
 
 # smallTest/corrTest
 #XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
@@ -142,7 +146,9 @@ ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
 #FILENAME = seismic-bin-19x19x200.tsi
 #FILENAME = seismic-19x19x200.out
 #FILENAME = seismic-194x192x200.out
-FILENAME = seismic-300x300x320.out
+#FILENAME = seismic-300x300x320.out
+FILENAME = seismic-300x300x552.out
+#FILENAME = seismic-491x334x552.out
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
 # The default value is "tsi-ascii". See GLOBAL:RESULT_TYPE for more options
@@ -229,7 +235,7 @@ LAYERS_MIN = 6
 
 # The parameter LAYERS_MIN sets the minimum number of points to be used
 # for a grid layer.
-LAYER_SIZE_MIN = 25
+LAYER_SIZE_MIN = 35
 
 
 
