--- a/tsi-mig.conf
+++ b/tsi-mig.conf
@@ -64,7 +64,7 @@ LOG_PATH = /home/data/output/logs/
 
 # The global RESULT_FILE parameter sets the filename to use for the best AI
 # grid generated. The default filename is "BestAI.tsi".
-#RESULT_FILE = test.tsi
+RESULT_FILE = test.tsi
 
 # The global RESULT_TYPE parameter sets the format for the file with the
 # result grid. The default value is "tsi-ascii", compatible with GSLIB
@@ -86,7 +86,7 @@ RESULT_TYPE = gslib
 # is being executed on a cluster, no local file system is needed for each
 # node. Although a local file system would yield the best performance, the
 # program can use any file system available to the cluster.
-#USEFS = 1
+USEFS = 1
 
 # The heap THRESHOLD parameter sets the number of grids to allocate before
 # attempting to swap any grid to disk. The default value is 8, the minimum
@@ -119,7 +119,7 @@ TMP_PATH = /tmp/tsi-miguel/
 # bigTest
 XNUMBER = 300      # Number of blocks in X direction (NX)
 YNUMBER = 300      # Number of blocks in Y direction (NY)
-ZNUMBER = 372   # Number of blocks in Z direction (NZ)
+ZNUMBER = 320   # Number of blocks in Z direction (NZ)
 # giant
 #XNUMBER = 491      # Number of blocks in X direction (NX)
 #YNUMBER = 334      # Number of blocks in Y direction (NY)
@@ -231,7 +231,7 @@ BCM_ROOT = 1
 # The parameter LAYERS_MIN set the minimum number of layers to use when
 # spliting a grid. If RANDOM_LAYERS is set to 0 (false), LAYERS_MIN will
 # be used to set the fixed number of layers to be used.
-LAYERS_MIN = 6
+LAYERS_MIN = 4
 
 # The parameter LAYERS_MIN sets the minimum number of points to be used
 # for a grid layer.
