--- a/tsi-mig.conf
+++ b/tsi-mig.conf
@@ -64,7 +64,7 @@ LOG_PATH = /home/data/output/logs/
 
 # The global RESULT_FILE parameter sets the filename to use for the best AI
 # grid generated. The default filename is "BestAI.tsi".
-RESULT_FILE = test.tsi
+RESULT_FILE = test3.tsi
 
 # The global RESULT_TYPE parameter sets the format for the file with the
 # result grid. The default value is "tsi-ascii", compatible with GSLIB
@@ -119,7 +119,7 @@ TMP_PATH = /tmp/tsi-miguel/
 # bigTest
 XNUMBER = 300      # Number of blocks in X direction (NX)
 YNUMBER = 300      # Number of blocks in Y direction (NY)
-ZNUMBER = 320   # Number of blocks in Z direction (NZ)
+ZNUMBER = 372   # Number of blocks in Z direction (NZ)
 # giant
 #XNUMBER = 491      # Number of blocks in X direction (NX)
 #YNUMBER = 334      # Number of blocks in Y direction (NY)
