[svn] adicionei o suporte preliminar para dumps e resumes

--- a/tsi.conf
+++ b/tsi.conf
@@ -79,7 +79,7 @@ RESULT_TYPE = gslib
 # The heap SIZE parameter sets the number of grids that will be made
 # available for the TSI execution. The default value is 12, the current
 # maximum number of grids that are needed.
-#SIZE = 12
+SIZE = 20
 
 # The heap USEFS parameter is the flag that triggers swapping unused grids
 # to disk to save memory. The default value is 0 (false). If the program
