--- a/tsi-luis.conf
+++ b/tsi-luis.conf
@@ -109,13 +109,13 @@ THRESHOLD = 8
 ########################################################################
 [GRID]
 # smallTest
-#XNUMBER = 19      # Number of blocks in X direction (NX)
-#YNUMBER = 19      # Number of blocks in Y direction (NY)
-#ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+XNUMBER = 19      # Number of blocks in X direction (NX)
+YNUMBER = 19      # Number of blocks in Y direction (NY)
+ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 # corrTest
-XNUMBER = 194      # Number of blocks in X direction (NX)
-YNUMBER = 192      # Number of blocks in Y direction (NY)
-ZNUMBER = 200      # Number of blocks in Z direction (NZ)
+#XNUMBER = 194      # Number of blocks in X direction (NX)
+#YNUMBER = 192      # Number of blocks in Y direction (NY)
+#ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
 #XNUMBER = 300      # Number of blocks in X direction (NX)
 #YNUMBER = 300      # Number of blocks in Y direction (NY)
@@ -140,8 +140,8 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 # The FILENAME parameter sets the name for the file with the seismic
 # data.
 #FILENAME = seismic-bin-19x19x200.tsi
-#FILENAME = Seismic-19x19x200.out
-FILENAME = Seismic-194x192x200.out
+FILENAME = Seismic-19x19x200.out
+#FILENAME = Seismic-194x192x200.out
 #FILENAME = seismic-300x300x320.tsi
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
@@ -161,10 +161,10 @@ FILE_TYPE = cart-grid
 # be enabled automatically. Dump files have fixed file names related to the
 # TSI execution parameters with the following format:
 # [iteration].[simulation].[grid_type].tsi
-#BAI   = 0            # Dump best acoustic impedance grid
-#BCM   = 0            # Dump best correlations grid
-#AI    = 0            # Dump acoustic impedance grid
-#CORR  = 0            # Dump correlations grid
+BAI   = 1            # Dump best acoustic impedance grid
+BCM   = 1            # Dump best correlations grid
+AI    = 1            # Dump acoustic impedance grid
+CORR  = 1            # Dump correlations grid
 #SYNTH = 0            # Dump synthetic grid
 #RCOEF = 0            # Dump reflection coefficients grid
 
