[svn] optimize last e novo compare parallel

--- a/tsi-luis.conf
+++ b/tsi-luis.conf
@@ -15,39 +15,19 @@ ITERATIONS = 2
 # correlation result. This is a mandatory parameter.
 SIMULATIONS = 2
 
-# The global parameter OPTIMIZE applies only to parallel execution of the
-# program. If this parameter is set to 1 (default), the program will try
-# to optimize execution by relating the number of simulations to the number
-# of processes running. If there are less than 2^n simulations per process
-# launched, it will free number of CPU that will not contribute to speed-up
-# the execution. It might be useful to set this parameter to false to access
-# more memory on the cluster.
-OPTIMIZE = 0
-
-# The global flag MIDDLEZERO controls the node that will be considered the
-# root node during parallel execution. If the flag is set to 1 (true), node
-# 0 will be considered the root node. If the flag is set to 0 (false) the
-# root node will process number (number_of_processes / 2). This flag may
-# provide some additional effiency during the communication stages of the
-# program, depending on the MPI implementation and cluster network topology.
-# This flag should have no effect on SMP systems. The default value is 0
-# (false).
-#MIDDLEZERO = 0
-
 # The global flag VERBOSE controls the output of messages to the standard
 # output device. The default value is 0 (false).
 VERBOSE = 1
 
 # The global RESUME parameter sets the flag that enables the ability to resume
 # the execution from the data recorded on the dump path. The default value is
-# 0 (false). Setting this flag to 1 (true) will enable all dump flags. See
-# the DUMP section.
+# 0 (false).
 #RESUME = 0
 
 # The OPTIMIZE_LAST iteration parameter disables the selection and generation
 # of new best values since they are not needed. The default value is 1 (true).
-# Enabling the RESUME feature disables this optimization.
-OPTIMIZE_LAST = 0
+# Enabling the RESUME or DUMP features disables this optimization.
+#OPTIMIZE_LAST = 1
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
@@ -77,7 +57,7 @@ RESULT_TYPE = gslib
 
 [HEAP]
 # The heap SIZE parameter sets the number of grids that will be made
-# available for the TSI execution. The default value is 12, the current
+# available for the TSI execution. The default value is 13, the current
 # maximum number of grids that are needed.
 SIZE = 15
 
@@ -86,7 +66,7 @@ SIZE = 15
 # is being executed on a cluster, no local file system is needed for each
 # node. Although a local file system would yield the best performance, the
 # program can use any file system available to the cluster.
-USEFS = 1
+#USEFS = 1
 
 # The heap THRESHOLD parameter sets the number of grids to allocate before
 # attempting to swap any grid to disk. The default value is 8, the minimum
@@ -94,16 +74,45 @@ USEFS = 1
 # heap will only allocate more space when it's needed. If the value is set
 # to the heap SIZE, no swapping will occur (same as USEFS = 0). Higher values
 # yield less swapping.
-THRESHOLD = 8
+#THRESHOLD = 8
 
 # The heap PATH parameters sets the path to the location where the swap
 # files will bw stored. The default value is "/tmp/".
 #TMP_PATH = /tmp/tsi-miguel/
 
+
+
+[MPI]
+# The global flag MIDDLEZERO controls the node that will be considered the
+# root node during parallel execution. If the flag is set to 1 (true), node
+# 0 will be considered the root node. If the flag is set to 0 (false) the
+# root node will process number (number_of_processes / 2). This flag may
+# provide some additional effiency during the communication stages of the
+# program, depending on the MPI implementation and cluster network topology.
+# This flag should have no effect on SMP systems. The default value is 0
+# (false).
+#MIDDLEZERO = 0
+
+# The global parameter OPTIMIZE applies only to parallel execution of the
+# program. If this parameter is set to 1 (default), the program will try
+# to optimize execution by relating the number of simulations to the number
+# of processes running. If there are less than 2^n simulations per process
+# launched, it will free number of CPU that will not contribute to speed-up
+# the execution.
+OPTIMIZE = 0
+
 # The USE_MPI_IO parameter switches the I/O functions from the standard
 # library to the I/O functions provided by the MPI library. The default
 # value is 0 (false).
 #USE_MPI_IO = 0
+
+# The COMPARE parameter enables the use of collective operations. By default,
+# the distributed selection of best results is done using point to point
+# communication. When optimized, collective operations can provide higher
+# performance. Default setting is 0 (false).
+COMPARE = 1
+
+
 
 ########################################################################
 ########################################################################
