[svn] concluao do compare parallel (collective ops)

--- a/tsi-luis.conf
+++ b/tsi-luis.conf
@@ -13,7 +13,7 @@ ITERATIONS = 2
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 2
+SIMULATIONS = 16
 
 # The global flag VERBOSE controls the output of messages to the standard
 # output device. The default value is 0 (false).
@@ -27,7 +27,7 @@ VERBOSE = 1
 # The OPTIMIZE_LAST iteration parameter disables the selection and generation
 # of new best values since they are not needed. The default value is 1 (true).
 # Enabling the RESUME or DUMP features disables this optimization.
-#OPTIMIZE_LAST = 1
+OPTIMIZE_LAST = 1
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
