--- a/tsi-mig.conf
+++ b/tsi-mig.conf
@@ -8,12 +8,12 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 2
+ITERATIONS = 4
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 4
+SIMULATIONS = 3
 
 # The global flag VERBOSE controls the output of messages to the standard
 # output device. The default value is 0 (false).
@@ -27,7 +27,7 @@ VERBOSE = 1
 # The OPTIMIZE_LAST iteration parameter disables the selection and generation
 # of new best values since they are not needed. The default value is 1 (true).
 # Enabling the RESUME or DUMP features disables this optimization.
-OPTIMIZE_LAST = 0
+OPTIMIZE_LAST = 1
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
@@ -110,7 +110,7 @@ OPTIMIZE = 0
 # the distributed selection of best results is done using point to point
 # communication. When optimized, collective operations can provide higher
 # performance. Default setting is 0 (false).
-#COMPARE = 1
+COMPARE = 1
 
 
 
@@ -122,26 +122,26 @@ OPTIMIZE = 0
 #YNUMBER = 19      # Number of blocks in Y direction (NY)
 #ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 # corrTest
-#XNUMBER = 194      # Number of blocks in X direction (NX)
-#YNUMBER = 192      # Number of blocks in Y direction (NY)
-#ZNUMBER = 200      # Number of blocks in Z direction (NZ)
+XNUMBER = 194      # Number of blocks in X direction (NX)
+YNUMBER = 192      # Number of blocks in Y direction (NY)
+ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
-XNUMBER = 300      # Number of blocks in X direction (NX)
-YNUMBER = 300      # Number of blocks in Y direction (NY)
-ZNUMBER = 372   # Number of blocks in Z direction (NZ)
+#XNUMBER = 300      # Number of blocks in X direction (NX)
+#YNUMBER = 300      # Number of blocks in Y direction (NY)
+#ZNUMBER = 320   # Number of blocks in Z direction (NZ)
 # giant
 #XNUMBER = 491      # Number of blocks in X direction (NX)
 #YNUMBER = 334      # Number of blocks in Y direction (NY)
 #ZNUMBER = 552      # Number of blocks in Z direction (NZ)
 
 # smallTest/corrTest
-#XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
-#YCOORD = 4159      # Coordinate in Y axis of the first block (YMN)
-#ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
-# bigTest
 XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
-YCOORD = 4000      # Coordinate in Y axis of the first block (YMN)
-ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
+YCOORD = 4159      # Coordinate in Y axis of the first block (YMN)
+ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
+# bigTest
+#XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
+#YCOORD = 4000      # Coordinate in Y axis of the first block (YMN)
+#ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
 
 
 [SEISMIC]
@@ -154,9 +154,9 @@ ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
 # data.
 #FILENAME = seismic-bin-19x19x200.tsi
 #FILENAME = seismic-19x19x200.out
-#FILENAME = seismic-194x192x200.out
+FILENAME = seismic-194x192x200.out
 #FILENAME = seismic-300x300x320.out
-FILENAME = seismic-300x300x552.out
+#FILENAME = seismic-300x300x552.out
 #FILENAME = seismic-491x334x552.out
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
