--- a/tsi-luis.conf
+++ b/tsi-luis.conf
@@ -13,7 +13,7 @@ ITERATIONS = 2
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 16
+SIMULATIONS = 1
 
 # The global flag VERBOSE controls the output of messages to the standard
 # output device. The default value is 0 (false).
@@ -93,14 +93,6 @@ SIZE = 15
 # (false).
 #MIDDLEZERO = 0
 
-# The global parameter OPTIMIZE applies only to parallel execution of the
-# program. If this parameter is set to 1 (default), the program will try
-# to optimize execution by relating the number of simulations to the number
-# of processes running. If there are less than 2^n simulations per process
-# launched, it will free number of CPU that will not contribute to speed-up
-# the execution.
-OPTIMIZE = 0
-
 # The USE_MPI_IO parameter switches the I/O functions from the standard
 # library to the I/O functions provided by the MPI library. The default
 # value is 0 (false).
@@ -118,13 +110,13 @@ COMPARE = 1
 ########################################################################
 [GRID]
 # smallTest
-XNUMBER = 19      # Number of blocks in X direction (NX)
-YNUMBER = 19      # Number of blocks in Y direction (NY)
-ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+#XNUMBER = 19      # Number of blocks in X direction (NX)
+#YNUMBER = 19      # Number of blocks in Y direction (NY)
+#ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 # corrTest
-#XNUMBER = 194      # Number of blocks in X direction (NX)
-#YNUMBER = 192      # Number of blocks in Y direction (NY)
-#ZNUMBER = 200      # Number of blocks in Z direction (NZ)
+XNUMBER = 194      # Number of blocks in X direction (NX)
+YNUMBER = 192      # Number of blocks in Y direction (NY)
+ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
 #XNUMBER = 300      # Number of blocks in X direction (NX)
 #YNUMBER = 300      # Number of blocks in Y direction (NY)
@@ -149,8 +141,8 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 # The FILENAME parameter sets the name for the file with the seismic
 # data.
 #FILENAME = seismic-bin-19x19x200.tsi
-FILENAME = Seismic-19x19x200.out
-#FILENAME = Seismic-194x192x200.out
+#FILENAME = Seismic-19x19x200.out
+FILENAME = Seismic-194x192x200.out
 #FILENAME = seismic-300x300x320.tsi
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
@@ -170,22 +162,22 @@ FILE_TYPE = cart-grid
 # be enabled automatically. Dump files have fixed file names related to the
 # TSI execution parameters with the following format:
 # [iteration].[simulation].[grid_type].tsi
-BAI   = 1            # Dump best acoustic impedance grid
-BCM   = 1            # Dump best correlations grid
-AI    = 1            # Dump acoustic impedance grid
-CORR  = 1            # Dump correlations grid
-#SYNTH = 0            # Dump synthetic grid
-#RCOEF = 0            # Dump reflection coefficients grid
+BAI   = 0            # Dump best acoustic impedance grid
+BCM   = 0            # Dump best correlations grid
+AI    = 0            # Dump acoustic impedance grid
+CORR  = 0            # Dump correlations grid
+SYNTH = 0            # Dump synthetic grid
+RCOEF = 0            # Dump reflection coefficients grid
 
 # The PATH parameter sets the path that will be appended to the filenames
 # of the dump files. If no parameter is supplied, the global parameter
 # OUTPUT_PATH will be used.
-#PATH =
+PATH = /home/data/output/dump/
 
 # The DUMP_TYPE parameter sets the file format of the files to be dumped.
 # The default value is "tsi-bin". See GLOBAL:RESULT_TYPE for more options
 # for DUMP_TYPE.
-DUMP_TYPE = tsi-ascii
+FILE_TYPE = gslib
 
 DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
 
