[svn] Merge do tsi-5.4 com a main branch.

--- a/tsi-luis.conf
+++ b/tsi-luis.conf
@@ -47,11 +47,11 @@ OUTPUT_PATH = /home/data/output/
 #RESULT_FILE = test.tsi
 
 # The global RESULT_TYPE parameter sets the format for the file with the
-# result grid. The default value is "tsi-ascii", compatible with GSLIB
-# format. Alternative values are "tsi-bin", TSI proprietary binary format;
-# "sgems", a binary format compatible with S-GEMS; "cart-grid" for a
-# plain cartesian grid and "gslib" for a file with GSLIB format.
-RESULT_TYPE = gslib
+# result grid. The default value is "tsi-ascii", compatible with SGEMS ascii
+# format. Alternative values are "tsi-bin", TSI own binary format;
+# "gslib" for a plain cartesian grid and "sgems-ascii" for a file with sgems
+# ascii format.
+RESULT_TYPE = tsi-ascii
 
 
 
@@ -148,7 +148,7 @@ FILENAME = Seismic-194x192x200.out
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
 # The default value is "tsi-ascii". See GLOBAL:RESULT_TYPE for more options
 # for FILE_TYPE.
-FILE_TYPE = cart-grid
+FILE_TYPE = sgems-ascii
 
 ########################################################################
 ########################################################################
@@ -177,7 +177,7 @@ PATH = /home/data/output/dump/
 # The DUMP_TYPE parameter sets the file format of the files to be dumped.
 # The default value is "tsi-bin". See GLOBAL:RESULT_TYPE for more options
 # for DUMP_TYPE.
-FILE_TYPE = gslib
+FILE_TYPE = tsi-ascii
 
 DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
 
