--- a/tsi-mig.conf
+++ b/tsi-mig.conf
@@ -8,12 +8,12 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 2
+ITERATIONS = 4
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 2
+SIMULATIONS = 32
 
 # The global flag VERBOSE controls the output of messages to the standard
 # output device. The default value is 0 (false).
@@ -44,14 +44,14 @@ LOG_PATH = /home/data/output/logs/
 
 # The global RESULT_FILE parameter sets the filename to use for the best AI
 # grid generated. The default filename is "BestAI.tsi".
-RESULT_FILE = test3.tsi
+RESULT_FILE = 1cpu.tsi
 
 # The global RESULT_TYPE parameter sets the format for the file with the
-# result grid. The default value is "tsi-ascii", compatible with GSLIB
-# format. Alternative values are "tsi-bin", TSI proprietary binary format;
-# "sgems", a binary format compatible with S-GEMS; "cart-grid" for a
-# plain cartesian grid and "gslib" for a file with GSLIB format.
-RESULT_TYPE = gslib
+# result grid. The default value is "tsi-ascii", compatible with SGEMS ascii
+# format. Alternative values are "tsi-bin", TSI own binary format;
+# "gslib" for a plain cartesian grid and "sgems-ascii" for a file with sgems
+# ascii format.
+RESULT_TYPE = tsi-ascii
 
 
 
@@ -59,14 +59,14 @@ RESULT_TYPE = gslib
 # The heap SIZE parameter sets the number of grids that will be made
 # available for the TSI execution. The default value is 13, the current
 # maximum number of grids that are needed.
-SIZE = 16
+SIZE = 13
 
 # The heap USEFS parameter is the flag that triggers swapping unused grids
 # to disk to save memory. The default value is 0 (false). If the program
 # is being executed on a cluster, no local file system is needed for each
 # node. Although a local file system would yield the best performance, the
 # program can use any file system available to the cluster.
-USEFS = 1
+USEFS = 0
 
 # The heap THRESHOLD parameter sets the number of grids to allocate before
 # attempting to swap any grid to disk. The default value is 8, the minimum
@@ -153,16 +153,16 @@ ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
 # The FILENAME parameter sets the name for the file with the seismic
 # data.
 #FILENAME = seismic-bin-19x19x200.tsi
-FILENAME = seismic-19x19x200.out
+#FILENAME = seismic-19x19x200.out
 #FILENAME = seismic-194x192x200.out
 #FILENAME = seismic-300x300x320.out
-#FILENAME = seismic-300x300x552.out
+FILENAME = seismic-300x300x552.out
 #FILENAME = seismic-491x334x552.out
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
 # The default value is "tsi-ascii". See GLOBAL:RESULT_TYPE for more options
 # for FILE_TYPE.
-FILE_TYPE = gslib
+FILE_TYPE = sgems-ascii
 
 ########################################################################
 ########################################################################
