--- a/tsi.conf
+++ b/tsi.conf
@@ -22,7 +22,7 @@ SIMULATIONS = 1
 # launched, it will free number of CPU that will not contribute to speed-up
 # the execution. It might be useful to set this parameter to false to access
 # more memory on the cluster.
-OPTIMIZE = 0
+#OPTIMIZE = 0
 
 # The global flag MIDDLEZERO controls the node that will be considered the
 # root node during parallel execution. If the flag is set to 1 (true), node
@@ -47,7 +47,7 @@ VERBOSE = 1
 # The OPTIMIZE_LAST iteration parameter disables the selection and generation
 # of new best values since they are not needed. The default value is 1 (true).
 # Enabling the RESUME feature disables this optimization.
-OPTIMIZE_LAST = 0
+#OPTIMIZE_LAST = 0
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
@@ -67,11 +67,11 @@ LOG_PATH = /home/data/output.miguel/logs/
 #RESULT_FILE = test.tsi
 
 # The global RESULT_TYPE parameter sets the format for the file with the
-# result grid. The default value is "tsi-ascii", compatible with GSLIB
-# format. Alternative values are "tsi-bin", TSI proprietary binary format;
-# "sgems", a binary format compatible with S-GEMS; "cart-grid" for a
-# plain cartesian grid and "gslib" for a file with GSLIB format.
-RESULT_TYPE = gslib
+# result grid. The default value is "tsi-ascii", compatible with SGEMS ascii
+# format. Alternative values are "tsi-bin", TSI own binary format;
+# "gslib" for a plain cartesian grid and "sgems-ascii" for a file with sgems
+# ascii format.
+RESULT_TYPE = tsi-ascii
 
 
 
@@ -79,14 +79,14 @@ RESULT_TYPE = gslib
 # The heap SIZE parameter sets the number of grids that will be made
 # available for the TSI execution. The default value is 12, the current
 # maximum number of grids that are needed.
-SIZE = 20
+SIZE = 13
 
 # The heap USEFS parameter is the flag that triggers swapping unused grids
 # to disk to save memory. The default value is 0 (false). If the program
 # is being executed on a cluster, no local file system is needed for each
 # node. Although a local file system would yield the best performance, the
 # program can use any file system available to the cluster.
-USEFS = 1
+USEFS = 0
 
 # The heap THRESHOLD parameter sets the number of grids to allocate before
 # attempting to swap any grid to disk. The default value is 8, the minimum
@@ -147,7 +147,7 @@ FILENAME = seismic-194x192x200.out
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
 # The default value is "tsi-ascii". See GLOBAL:RESULT_TYPE for more options
 # for FILE_TYPE.
-FILE_TYPE = gslib
+FILE_TYPE = sgems-ascii
 
 ########################################################################
 ########################################################################
@@ -208,23 +208,11 @@ FILENAME = Wavelet.prn
 # wavelet data.
 USED_VALUES = 64    # Size of wavelet -1
 
-# SPOTS = USED_VALUES/2
-SPOTS = 32          # (not usable)
-
 
 [CORR]
-# The parameter BCM_ROOT is a flag that enables some additional calculations
-# during the seismic inversion phase... MORE INFO...
-BCM_ROOT = 1
-
-# The flag RANDOM_LAYERS enables the randomization of the size of the
-# correlation vectors used to decide which AI vectors are selected for the
-# next iteration. The default value is 1 (true).
-#RANDOM_LAYERS = 1
-
+#Layers of variable size and number are used to calculate the correlations.
 # The parameter LAYERS_MIN set the minimum number of layers to use when
-# spliting a grid. If RANDOM_LAYERS is set to 0 (false), LAYERS_MIN will
-# be used to set the fixed number of layers to be used.
+# spliting a grid.
 LAYERS_MIN = 4
 
 # The parameter LAYERS_MIN sets the minimum number of points to be used
@@ -290,9 +278,6 @@ ZSIZE  = 1         # Block size in Z axis (ZSIZ)
 
 [MASK]
 NULL_VALUE = -99999.25                      # Null value (NOSVALUE)
-USE_MASK   = 0                              # Use of mask flag (IMASK)
-#PATH =
-FILENAME   = Mask.dat                       # Mask file 
 
 
 ##### Search Parameters #####
