[svn] tsi.conf and README updates

--- a/tsi-mig.conf
+++ b/tsi-mig.conf
@@ -8,12 +8,12 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 4
+ITERATIONS = 2
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 32
+SIMULATIONS = 2
 
 # The global flag VERBOSE controls the output of messages to the standard
 # output device. The default value is 0 (false).
@@ -27,20 +27,20 @@ VERBOSE = 1
 # The OPTIMIZE_LAST iteration parameter disables the selection and generation
 # of new best values since they are not needed. The default value is 1 (true).
 # Enabling the RESUME or DUMP features disables this optimization.
-OPTIMIZE_LAST = 1
+OPTIMIZE_LAST = 0
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
-INPUT_PATH = /home/data/input/
+INPUT_PATH = /home/miguel/tsi/input/
 
 # The global OUTPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to write files.
-OUTPUT_PATH = /home/data/output/
+OUTPUT_PATH = /home/miguel/tsi/output/
 
 # The global LOG_PATH parameter sets the path for the log files. If no value
 # is supplied, the path in the OUTPUT_PATH parameter will be used to write
 # the logs.
-LOG_PATH = /home/data/output/logs/
+LOG_PATH = /home/miguel/tsi/logs/
 
 # The global RESULT_FILE parameter sets the filename to use for the best AI
 # grid generated. The default filename is "BestAI.tsi".
@@ -101,16 +101,13 @@ TMP_PATH = /tmp/tsi-miguel/
 # the execution.
 OPTIMIZE = 0
 
-# The USE_MPI_IO parameter switches the I/O functions from the standard
-# library to the I/O functions provided by the MPI library. The default
-# value is 0 (false).
-#USE_MPI_IO = 0
 
-# The COMPARE parameter enables the use of collective operations. By default,
-# the distributed selection of best results is done using point to point
-# communication. When optimized, collective operations can provide higher
-# performance. Default setting is 0 (false).
-COMPARE = 0
+# The COLLECTIVE_COMPARE parameter enables the use of collective operations.
+# By default, the distributed COMPARE and selection of best results is done 
+# using point to point  communication. 
+# When optimized, collective operations can provide higher performance. 
+# Default setting is 0 (false).
+COLLECTIVE_COMPARE = 1
 
 
 
@@ -122,26 +119,26 @@ COMPARE = 0
 #YNUMBER = 19      # Number of blocks in Y direction (NY)
 #ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 # corrTest
-#XNUMBER = 194      # Number of blocks in X direction (NX)
-#YNUMBER = 192      # Number of blocks in Y direction (NY)
-#ZNUMBER = 200      # Number of blocks in Z direction (NZ)
+XNUMBER = 194      # Number of blocks in X direction (NX)
+YNUMBER = 192      # Number of blocks in Y direction (NY)
+ZNUMBER = 150      # Number of blocks in Z direction (NZ)
 # bigTest
-XNUMBER = 300      # Number of blocks in X direction (NX)
-YNUMBER = 300      # Number of blocks in Y direction (NY)
-ZNUMBER = 320   # Number of blocks in Z direction (NZ)
+#XNUMBER = 300      # Number of blocks in X direction (NX)
+#YNUMBER = 300      # Number of blocks in Y direction (NY)
+#ZNUMBER = 150   # Number of blocks in Z direction (NZ)
 # giant
 #XNUMBER = 491      # Number of blocks in X direction (NX)
 #YNUMBER = 334      # Number of blocks in Y direction (NY)
 #ZNUMBER = 552      # Number of blocks in Z direction (NZ)
 
 # smallTest/corrTest
-#XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
-#YCOORD = 4159      # Coordinate in Y axis of the first block (YMN)
-#ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
-# bigTest
 XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
-YCOORD = 4000      # Coordinate in Y axis of the first block (YMN)
-ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
+YCOORD = 4159      # Coordinate in Y axis of the first block (YMN)
+ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
+# bigTest
+#XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
+#YCOORD = 4000      # Coordinate in Y axis of the first block (YMN)
+#ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
 
 
 [SEISMIC]
@@ -154,9 +151,9 @@ ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
 # data.
 #FILENAME = seismic-bin-19x19x200.tsi
 #FILENAME = seismic-19x19x200.out
-#FILENAME = seismic-194x192x200.out
+FILENAME = seismic-194x192x200.out
 #FILENAME = seismic-300x300x320.out
-FILENAME = seismic-300x300x552.out
+#FILENAME = seismic-300x300x552.out
 #FILENAME = seismic-491x334x552.out
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
@@ -223,28 +220,16 @@ FILENAME = Wavelet.prn
 # wavelet data.
 USED_VALUES = 64    # Size of wavelet -1
 
-# SPOTS = USED_VALUES/2
-SPOTS = 32          # (not usable)
-
 
 [CORR]
-# The parameter BCM_ROOT is a flag that enables some additional calculations
-# during the seismic inversion phase... MORE INFO...
-BCM_ROOT = 1
-
-# The flag RANDOM_LAYERS enables the randomization of the size of the
-# correlation vectors used to decide which AI vectors are selected for the
-# next iteration. The default value is 1 (true).
-#RANDOM_LAYERS = 1
-
+#Layers of variable size and number are used to calculate the correlations.
 # The parameter LAYERS_MIN set the minimum number of layers to use when
-# spliting a grid. If RANDOM_LAYERS is set to 0 (false), LAYERS_MIN will
-# be used to set the fixed number of layers to be used.
+# spliting a grid.
 LAYERS_MIN = 4
 
 # The parameter LAYERS_MIN sets the minimum number of points to be used
 # for a grid layer.
-LAYER_SIZE_MIN = 35
+LAYER_SIZE_MIN = 30
 
 
 
@@ -305,9 +290,6 @@ ZSIZE  = 1         # Block size in Z axis (ZSIZ)
 
 [MASK]
 NULL_VALUE = -99999.25                      # Null value (NOSVALUE)
-USE_MASK   = 0                              # Use of mask flag (IMASK)
-#PATH =
-FILENAME   = Mask.dat                       # Mask file 
 
 
 ##### Search Parameters #####
