--- a/tsi.conf
+++ b/tsi.conf
@@ -8,31 +8,12 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 1
+ITERATIONS = 2
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 1
-
-# The global parameter OPTIMIZE applies only to parallel execution of the
-# program. If this parameter is set to 1 (default), the program will try
-# to optimize execution by relating the number of simulations to the number
-# of processes running. If there are less than 2^n simulations per process
-# launched, it will free number of CPU that will not contribute to speed-up
-# the execution. It might be useful to set this parameter to false to access
-# more memory on the cluster.
-#OPTIMIZE = 0
-
-# The global flag MIDDLEZERO controls the node that will be considered the
-# root node during parallel execution. If the flag is set to 1 (true), node
-# 0 will be considered the root node. If the flag is set to 0 (false) the
-# root node will process number (number_of_processes / 2). This flag may
-# provide some additional effiency during the communication stages of the
-# program, depending on the MPI implementation and cluster network topology.
-# This flag should have no effect on SMP systems. The default value is 0
-# (false).
-#MIDDLEZERO = 0
+SIMULATIONS = 2
 
 # The global flag VERBOSE controls the output of messages to the standard
 # output device. The default value is 0 (false).
@@ -40,31 +21,30 @@ VERBOSE = 1
 
 # The global RESUME parameter sets the flag that enables the ability to resume
 # the execution from the data recorded on the dump path. The default value is
-# 0 (false). Setting this flag to 1 (true) will enable all dump flags. See
-# the DUMP section.
+# 0 (false).
 #RESUME = 0
 
 # The OPTIMIZE_LAST iteration parameter disables the selection and generation
 # of new best values since they are not needed. The default value is 1 (true).
-# Enabling the RESUME feature disables this optimization.
-#OPTIMIZE_LAST = 0
+# Enabling the RESUME or DUMP features disables this optimization.
+OPTIMIZE_LAST = 0
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
-INPUT_PATH = /home/data/input/
+INPUT_PATH = /home/miguel/tsi/input/
 
 # The global OUTPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to write files.
-OUTPUT_PATH = /home/data/output.miguel/
+OUTPUT_PATH = /home/miguel/tsi/output/
 
 # The global LOG_PATH parameter sets the path for the log files. If no value
 # is supplied, the path in the OUTPUT_PATH parameter will be used to write
 # the logs.
-LOG_PATH = /home/data/output.miguel/logs/
+LOG_PATH = /home/miguel/tsi/logs/
 
 # The global RESULT_FILE parameter sets the filename to use for the best AI
 # grid generated. The default filename is "BestAI.tsi".
-#RESULT_FILE = test.tsi
+RESULT_FILE = 1cpu.tsi
 
 # The global RESULT_TYPE parameter sets the format for the file with the
 # result grid. The default value is "tsi-ascii", compatible with SGEMS ascii
@@ -77,9 +57,9 @@ RESULT_TYPE = tsi-ascii
 
 [HEAP]
 # The heap SIZE parameter sets the number of grids that will be made
-# available for the TSI execution. The default value is 12, the current
+# available for the TSI execution. The default value is 13, the current
 # maximum number of grids that are needed.
-SIZE = 13
+SIZE = 12
 
 # The heap USEFS parameter is the flag that triggers swapping unused grids
 # to disk to save memory. The default value is 0 (false). If the program
@@ -100,10 +80,36 @@ THRESHOLD = 8
 # files will bw stored. The default value is "/tmp/".
 TMP_PATH = /tmp/tsi-miguel/
 
-# The USE_MPI_IO parameter switches the I/O functions from the standard
-# library to the I/O functions provided by the MPI library. The default
-# value is 0 (false).
-#USE_MPI_IO = 0
+
+
+[MPI]
+# The global flag MIDDLEZERO controls the node that will be considered the
+# root node during parallel execution. If the flag is set to 1 (true), node
+# 0 will be considered the root node. If the flag is set to 0 (false) the
+# root node will process number (number_of_processes / 2). This flag may
+# provide some additional effiency during the communication stages of the
+# program, depending on the MPI implementation and cluster network topology.
+# This flag should have no effect on SMP systems. The default value is 0
+# (false).
+#MIDDLEZERO = 0
+
+# The global parameter OPTIMIZE applies only to parallel execution of the
+# program. If this parameter is set to 1 (default), the program will try
+# to optimize execution by relating the number of simulations to the number
+# of processes running. If there are less than 2^n simulations per process
+# launched, it will free number of CPU that will not contribute to speed-up
+# the execution.
+OPTIMIZE = 0
+
+
+# The COLLECTIVE_COMPARE parameter enables the use of collective operations.
+# By default, the distributed COMPARE and selection of best results is done 
+# using point to point  communication. 
+# When optimized, collective operations can provide higher performance. 
+# Default setting is 0 (false).
+COLLECTIVE_COMPARE = 1
+
+
 
 ########################################################################
 ########################################################################
@@ -119,7 +125,11 @@ ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
 #XNUMBER = 300      # Number of blocks in X direction (NX)
 #YNUMBER = 300      # Number of blocks in Y direction (NY)
-#ZNUMBER = 320      # Number of blocks in Z direction (NZ)
+#ZNUMBER = 150   # Number of blocks in Z direction (NZ)
+# giant
+#XNUMBER = 491      # Number of blocks in X direction (NX)
+#YNUMBER = 334      # Number of blocks in Y direction (NY)
+#ZNUMBER = 552      # Number of blocks in Z direction (NZ)
 
 # smallTest/corrTest
 XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
@@ -142,7 +152,9 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 #FILENAME = seismic-bin-19x19x200.tsi
 #FILENAME = seismic-19x19x200.out
 FILENAME = seismic-194x192x200.out
-#FILENAME = seismic-300x300x320.tsi
+#FILENAME = seismic-300x300x320.out
+#FILENAME = seismic-300x300x552.out
+#FILENAME = seismic-491x334x552.out
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
 # The default value is "tsi-ascii". See GLOBAL:RESULT_TYPE for more options
@@ -217,7 +229,7 @@ LAYERS_MIN = 4
 
 # The parameter LAYERS_MIN sets the minimum number of points to be used
 # for a grid layer.
-LAYER_SIZE_MIN = 25
+LAYER_SIZE_MIN = 30
 
 
 
