[svn] bug fix in dump file_type

--- a/tsi-mig.conf
+++ b/tsi-mig.conf
@@ -185,10 +185,10 @@ FILE_TYPE = sgems-ascii
 # OUTPUT_PATH will be used.
 #PATH =
 
-# The DUMP_TYPE parameter sets the file format of the files to be dumped.
+# The FILE_TYPE parameter sets the file format of the files to be dumped.
 # The default value is "tsi-bin". See GLOBAL:RESULT_TYPE for more options
-# for DUMP_TYPE.
-DUMP_TYPE = tsi-ascii
+# for FILE_TYPE.
+FILE_TYPE = tsi-ascii
 
 DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
 
