[svn] use new random optionally, fix in DUMP filetype

--- a/tsi-luis.conf
+++ b/tsi-luis.conf
@@ -174,9 +174,9 @@ RCOEF = 0            # Dump reflection coefficients grid
 # OUTPUT_PATH will be used.
 PATH = /home/data/output/dump/
 
-# The FILE_TYPE parameter sets the file format of the files to be dumped.
+# The DUMP_TYPE parameter sets the file format of the files to be dumped.
 # The default value is "tsi-bin". See GLOBAL:RESULT_TYPE for more options
-# for FILE_TYPE.
+# for DUMP_TYPE.
 FILE_TYPE = tsi-ascii
 
 DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
