--- a/tsi.conf
+++ b/tsi.conf
@@ -8,12 +8,12 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 2
+ITERATIONS = 1
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 2
+SIMULATIONS = 1
 
 # The global flag VERBOSE controls the output of messages to the standard
 # output device. The default value is 0 (false).
@@ -39,7 +39,7 @@ LOG_PATH = /home/data/logs/
 
 # The global RESULT_FILE parameter sets the filename to use for the best AI
 # grid generated. The default filename is "BestAI.tsi".
-RESULT_FILE = 1cpu.tsi
+RESULT_FILE = 64sstrat1.tsi
 
 # The global RESULT_TYPE parameter sets the format for the file with the
 # result grid. The default value is "tsi-ascii", compatible with SGEMS ascii
@@ -120,7 +120,7 @@ COLLECTIVE_COMPARE = 1
 # bigTest
 XNUMBER = 300      # Number of blocks in X direction (NX)
 YNUMBER = 300      # Number of blocks in Y direction (NY)
-ZNUMBER = 330   # Number of blocks in Z direction (NZ)
+ZNUMBER = 400   # Number of blocks in Z direction (NZ)
 # giant
 #XNUMBER = 491      # Number of blocks in X direction (NX)
 #YNUMBER = 334      # Number of blocks in Y direction (NY)
