--- a/tsi.conf
+++ b/tsi.conf
@@ -19,6 +19,11 @@ SIMULATIONS = 1
 # output device. The default value is 0 (false).
 VERBOSE = 1
 
+# the SEED value can be force by the user using parameter.
+# it is not necessary, and it can affect quality and variety of the 
+# simulations, define it only when _really_ needed to be force.
+#SEED = 1556765432
+
 # The OPTIMIZE_LAST iteration parameter disables the selection and generation
 # of new best values since they are not needed. The default value is 1 (true).
 # Enabling the RESUME or DUMP features disables this optimization.
