fix typo in seed print to log

--- a/tsi.conf
+++ b/tsi.conf
@@ -22,7 +22,7 @@ VERBOSE = 1
 # the SEED value can be force by the user using parameter.
 # it is not necessary, and it can affect quality and variety of the 
 # simulations, define it only when _really_ needed to be force.
-#SEED = 1556765432
+SEED = 1556765432
 
 # The OPTIMIZE_LAST iteration parameter disables the selection and generation
 # of new best values since they are not needed. The default value is 1 (true).
