Change supported file types. Now we only use TWO filetypes: gslib - GSLIB FORMAT tsi-bin - tsi binary format (more compact, about 3 times smaller than gslib)

--- a/tsi.conf
+++ b/tsi.conf
@@ -47,11 +47,12 @@ LOG_PATH = /home/data/logs/
 RESULT_FILE = HUGE.tsi
 
 # The global RESULT_TYPE parameter sets the format for the file with the
-# result grid. The default value is "tsi-ascii", compatible with SGEMS ascii
-# format. Alternative values are "tsi-bin", TSI own binary format;
-# "gslib" for a plain cartesian grid and "sgems-ascii" for a file with sgems
-# ascii format.
-RESULT_TYPE = tsi-ascii
+# result grid. The default value is "gslib", a simple non-compressed ascii
+# data format, defined in http://www.gslib.com/gslib_help/format.html 
+# It is also compatible with the SGEMS application.
+# Alternatively there is "tsi-bin", TSI own binary format;
+# which reduzes the size to aproximately 1/3 of the gslib format.
+RESULT_TYPE = gslib
 
 
 
@@ -128,9 +129,9 @@ FILENAME = seismic-300x300x552.out
 FILENAME = seismic-491x334x552.out
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
-# The default value is "tsi-ascii". See GLOBAL:RESULT_TYPE for more options
+# The default value is "gslib". See GLOBAL:RESULT_TYPE for more options
 # for FILE_TYPE.
-FILE_TYPE = sgems-ascii
+FILE_TYPE = gslib
 
 ########################################################################
 ########################################################################
@@ -159,7 +160,7 @@ FILE_TYPE = sgems-ascii
 # The DUMP_TYPE parameter sets the file format of the files to be dumped.
 # The default value is "tsi-bin". See GLOBAL:RESULT_TYPE for more options
 # for DUMP_TYPE.
-DUMP_TYPE = tsi-ascii
+#DUMP_TYPE = gslib
 
 DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
 
